<resources>
    <string name="app_name">OMDB</string>
    <string name="search">Search</string>
    <string name="search_illus">search_illus</string>
    <string name="search_for_a_movie_or_tv_series">Search for a movie or TV series</string>
    <string name="internet_connection_error_message">Please Check Your Internet Connection</string>
    <string name="error_message_something_went_wrong_retry">Something went wrong please retry</string>
    <string name="something_went_wrong_message">Something went wrong</string>
    <string name="something_went_wrong_contact_us">Something went wrong please contact us for support</string>
    <string name="poster">poster</string>
    <string name="show_details">Show Details</string>
    <string name="show_on_imdb">Show on IMDB</string>
    <string name="swipe_up_to_filter">Swipe up to Filter</string>
    <string name="type_of_result">Type of result</string>
    <string name="movies">Movies</string>
    <string name="series">Series</string>
    <string name="episodes">Episodes</string>
    <string name="year">Year</string>
    <string name="all_types">All Types</string>
    <string name="title_activity_movie_details">MovieDetailsActivity</string>
    <string name="website_link">Website link</string>
    <string name="share_with_friends">Share with friends</string>
    <string name="runtime_text">%1$s | %2$s</string>
    <string name="synopsis">Synopsis</string>
    <string name="actors">Actors</string>
    <string name="share_app_message">Hey there! I found %1$s on OMDB check it out %2$s</string>

    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="applogo">appLogo</string>
    <string name="img_poster_transition">img_poster_transition</string>
    <string name="writter">Writter</string>
    <string name="director">Director</string>
    <string name="production">Production</string>
    <string name="awards">Awards</string>
    <string name="movie_or_tv_show_s_poster">Movie or TV show\'s poster</string>
    <string name="filter_movies_or_tv_shows">Filter movies or TV shows</string>
    <string name="apply">Apply</string>
</resources>
