<?xml version="1.0" encoding="utf-8"?>
<layout>

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="in.urveshtanna.omdb.activity.HomePageActivity">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>

        <include
            android:id="@+id/child_include"
            layout="@layout/content_home_page" />


        <android.support.v4.widget.NestedScrollView
            android:id="@+id/bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/icons"
            android:clipToPadding="true"
            android:elevation="@dimen/spacing_normal"
            app:behavior_peekHeight="48dp"
            app:behavior_hideable="false"
            app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/spacing_small"
                android:paddingLeft="@dimen/spacing_small"
                android:paddingRight="@dimen/spacing_small">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:text="@string/swipe_up_to_filter"
                    android:textStyle="bold" />


                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_alignParentEnd="true"
                    android:padding="@dimen/spacing_x_small"
                    android:src="@drawable/ic_sort_grey_700_24dp" />


                <TextView
                    android:id="@+id/tv_title_genre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_title"
                    android:layout_marginTop="@dimen/spacing_extra_small"
                    android:text="@string/type_of_result"
                    android:textAllCaps="true"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/font_x_small" />


                <RadioGroup
                    android:id="@+id/list_of_result_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_title_genre"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:orientation="vertical">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:layout_marginLeft="@dimen/spacing_normal"
                        android:layout_marginStart="@dimen/spacing_normal"
                        android:id="@+id/rdb_all"
                        android:text="@string/all_types" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/spacing_normal"
                        android:layout_marginStart="@dimen/spacing_normal"
                        android:id="@+id/rdb_movies"
                        android:text="@string/movies" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/spacing_normal"
                        android:layout_marginStart="@dimen/spacing_normal"
                        android:id="@+id/rdb_series"
                        android:text="@string/series" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/spacing_normal"
                        android:layout_marginStart="@dimen/spacing_normal"
                        android:id="@+id/rdb_episodes"
                        android:text="@string/episodes" />
                </RadioGroup>


                <LinearLayout
                    android:id="@+id/spinner_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/list_of_result_type"
                    android:layout_marginBottom="@dimen/spacing_normal"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:orientation="horizontal"
                    android:padding="@dimen/spacing_small">

                    <TextView
                        android:id="@+id/tv_year_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/year"
                        android:textAllCaps="true"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/font_x_small" />


                    <Spinner
                        android:id="@+id/sp_year"
                        android:layout_width="150dp"
                        android:layout_marginStart="@dimen/spacing_normal"
                        android:layout_marginLeft="@dimen/spacing_normal"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"
                        android:popupBackground="@color/icons" />

                </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/spinner_layout"
                    android:layout_margin="@dimen/spacing_extra_small"
                    android:background="@color/colorAccent"
                    android:clickable="true"
                    android:elevation="@dimen/spacing_extra_extra_small"
                    android:foreground="?attr/selectableItemBackground"
                    android:padding="@dimen/spacing_small"
                    android:text="Apply"
                    android:id="@+id/btn_apply_filter"
                    android:textAllCaps="true"
                    android:textColor="@color/icons"
                    android:textSize="@dimen/font_small" />


            </RelativeLayout>
        </android.support.v4.widget.NestedScrollView>

    </android.support.design.widget.CoordinatorLayout>
</layout>